# rokeycamp4-teamproject1-docentbot

./: README.md  Yolo8n_DetactModel.ipynb
final_pj/: package.xml  setup.cfg  setup.py
final_pj/final_pj/: CMakeLists.txt  battery_monitor_node6.py  dd_final.py  detect_and_measure_action_client.py  lobby_guide_navigator_node.py  loby_bot6.py  loby_guid.py  loby_guid_design.md  package.xml  robot6_final.md  select_monitor_mdfy.py  smm_mdfy.py
mini_porject/: package.xml  setup.cfg  setup.py
mini_porject/mini_porject/: detack_depth.py  madic_waypoint.py
my_interfaces/: package.xml
my_interfaces/action/: DetectAndMeasure.action
my_interfaces/srv/: CheckGuidingStatus.srv  GallerySelect.srv
