<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rokey@todo.todo">rokey</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend> <!--여기 builtin_interfaces 아래에 있었는데 위로 올림-->
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>rosidl_default_generators</build_depend> <!--여기 buildtool_depend로 되어 있었음-->
  <exec_depend>rosidl_default_runtime</exec_depend> <!--##### 이거 스펠링 잘 못 됨-->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>builtin_interfaces</exec_depend>






  <!-- <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_ruintime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
